--- a/index.html
+++ b/index.html
@@ -76,26 +76,30 @@
     <!-- Popular Movies -->
     <h2 class="popular-movies">Popular Movies</h2>
 
-    <div class="movies-container">
-      <img src="img-action-movies/400bullets.jpg" alt="" />
-      <img src="img-action-movies/mortalkombat.jpg" alt="" />
-      <img src="img-action-movies/takeback.jpg" alt="" />
-      <img src="img-action-movies/assault.jpg" alt="" />
-      <img src="img-action-movies/chaoswalking.jpg" alt="" />
-      <img src="img-action-movies/hotwater.jpg" alt="" />
-      <img src="img-action-movies/zack.jpg" alt="" />
-      <img src="img-action-movies/vanquish.jpg" alt="" />
-      <img src="img-action-movies/triggerpoint.jpg" alt="" />
-      <img src="img-action-movies/thunderforce.jpg" alt="" />
-      <img src="img-action-movies/raya.jpg" alt="" />
-      <img src="img-action-movies/night.jpg" alt="" />
+    <div class="wrapper">
+      <div class="movies-container">
+        <img src="img-action-movies/400bullets.jpg" alt="" />
+        <img src="img-action-movies/mortalkombat.jpg" alt="" />
+        <img src="img-action-movies/takeback.jpg" alt="" />
+        <img src="img-action-movies/assault.jpg" alt="" />
+        <img src="img-action-movies/chaoswalking.jpg" alt="" />
+        <img src="img-action-movies/hotwater.jpg" alt="" />
+        <img src="img-action-movies/zack.jpg" alt="" />
+        <img src="img-action-movies/vanquish.jpg" alt="" />
+        <img src="img-action-movies/triggerpoint.jpg" alt="" />
+        <img src="img-action-movies/thunderforce.jpg" alt="" />
+        <img src="img-action-movies/raya.jpg" alt="" />
+        <img src="img-action-movies/night.jpg" alt="" />
+      </div>
     </div>
 
     <!-- Footer -->
     <footer>
-      <div class="footer-container">
-        <p>© MOVIEFLASH</p>
-      </div>
+      <ul>
+        <li>Datenschutz</li>
+        <li>Impressum</li>
+      </ul>
+      <p class="movieflash">© MOVIEFLASH</p>
     </footer>
   </body>
 </html>
