--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="index.js" defer></script>
 
-    <title>Watch Movies Online</title>
+    <title>MOVIEFLASH - Watch Movies Online</title>
   </head>
   <body>
     <header>
       <!-- Navigation bar -->
       <nav class="navbar">
         <div class="nav-logo">
-          <img src="img/Logo.png" alt="" />
+          <a href="index.html"><img src="img/Logo.png" alt="" /></a>
         </div>
 
         <!-- Searchbar -->
         <div class="container">
           <div class="search-box">
-            <input type="text" class="search" placeholder="Search" />
+            <input type="text" class="search" placeholder="Search..." />
             <button type="submit" class="search-btn">
               <i class="fas fa-search"></i>
             </button>
@@ -49,8 +49,8 @@
         <!-- Navigation links -->
         <div class="navbar-links">
           <ul>
-            <li class="nav-buttons"><a href="#">Movies</a></li>
-            <li class="nav-buttons"><a href="#">Series</a></li>
+            <li class="nav-buttons"><a href="movies.html">Movies</a></li>
+            <li class="nav-buttons"><a href="series.html">Series</a></li>
             <li class="cta-button"><a href="#" class="login">Login</a></li>
           </ul>
         </div>
