--- a/series.html
+++ b/series.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <title>MOVIEFLASH - Popular Movies</title>
+
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/series.css" />
     <link rel="icon" href="img/clapperboard.png" />
@@ -18,9 +20,8 @@
     <!-- JavaScript -->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="index.js" defer></script>
-
-    <title>MOVIEFLASH - Popular Movies</title>
   </head>
+
   <body>
     <header>
       <!-- Navigation bar -->
@@ -50,7 +51,7 @@
         <div class="navbar-links">
           <ul>
             <li class="nav-buttons"><a href="movies.html">Movies</a></li>
-            <li class="nav-buttons"><a href="#">Series</a></li>
+            <li class="nav-buttons"><a href="series.html">Series</a></li>
             <li class="cta-button"><a href="#" class="login">Login</a></li>
           </ul>
         </div>
