--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- Slideshow -->
     <div class="slideshow-container">
-      <img src="img/Spiderman.jpg" />
+      <img src="https://images7.alphacoders.com/710/thumb-1920-710412.jpg" />
       <div class="arrows">
         <i class="fas fa-arrow-left"></i>
         <i class="fas fa-arrow-right"></i>
