--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
     <!-- JavaScript -->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script src="index.js" defer></script>
+    <script src="main.js" defer></script>
+    <script src="form-validation.js" defer></script>
+    <script src="slideshow.js" defer></script>
   </head>
 
   <body>
@@ -52,7 +54,9 @@
           <ul>
             <li class="nav-buttons"><a href="movies.html">Movies</a></li>
             <li class="nav-buttons"><a href="series.html">Series</a></li>
-            <li class="cta-button"><a href="#" class="login">Login</a></li>
+            <li class="cta-button">
+              <a href="login.html" class="login">Login</a>
+            </li>
           </ul>
         </div>
       </nav>
@@ -60,18 +64,40 @@
 
     <!-- Slideshow -->
     <div class="slideshow-container">
-      <img src="https://images7.alphacoders.com/710/thumb-1920-710412.jpg" />
-      <div class="arrows">
-        <i class="fas fa-arrow-left"></i>
-        <i class="fas fa-arrow-right"></i>
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <a
+          ><img src="https://images4.alphacoders.com/773/thumb-1920-773129.jpg"
+        /></a>
+        <div class="text">Harry Potter and the Half-Blood Prince</div>
       </div>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem repe,
-        <br />
-        dolorem ipsa molestiae similique officia natus voluptatem animi qui
-        <br />
-        natus voluptatem animi qui dolorem molestiae elit voluptatem animi
-      </p>
+
+      <div class="mySlides fade">
+        <div class="numbertext">2 / 3</div>
+        <a
+          ><img src="https://images.alphacoders.com/106/thumb-1920-1069901.jpg"
+        /></a>
+        <div class="text">Black Widow</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">3 / 3</div>
+        <a
+          ><img
+            src="https://images8.alphacoders.com/114/thumb-1920-1148062.jpg"
+        /></a>
+        <div class="text">Nobody</div>
+      </div>
+
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br />
+
+    <div style="text-align: center">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
     </div>
 
     <!-- Popular Movies -->
