--- a/series.html
+++ b/series.html
@@ -19,7 +19,9 @@
 
     <!-- JavaScript -->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script src="index.js" defer></script>
+    <script src="main.js" defer></script>
+    <script src="form-validation.js" defer></script>
+    <script src="slideshow.js" defer></script>
   </head>
 
   <body>
@@ -52,7 +54,9 @@
           <ul>
             <li class="nav-buttons"><a href="movies.html">Movies</a></li>
             <li class="nav-buttons"><a href="series.html">Series</a></li>
-            <li class="cta-button"><a href="#" class="login">Login</a></li>
+            <li class="cta-button">
+              <a href="login.html" class="login">Login</a>
+            </li>
           </ul>
         </div>
       </nav>
