--- a/index.html
+++ b/index.html
@@ -105,26 +105,26 @@
 
     <div class="wrapper">
       <div class="movies-container">
-        <img src="img-action-movies/400bullets.jpg" alt="" />
-        <img src="img-action-movies/mortalkombat.jpg" alt="" />
-        <img src="img-action-movies/takeback.jpg" alt="" />
-        <img src="img-action-movies/assault.jpg" alt="" />
-        <img src="img-action-movies/chaoswalking.jpg" alt="" />
-        <img src="img-action-movies/hotwater.jpg" alt="" />
-        <img src="img-action-movies/zack.jpg" alt="" />
-        <img src="img-action-movies/vanquish.jpg" alt="" />
-        <img src="img-action-movies/triggerpoint.jpg" alt="" />
-        <img src="img-action-movies/thunderforce.jpg" alt="" />
-        <img src="img-action-movies/raya.jpg" alt="" />
-        <img src="img-action-movies/night.jpg" alt="" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
       </div>
     </div>
 
     <!-- Footer -->
     <footer>
       <ul>
-        <li>Datenschutz</li>
-        <li>Impressum</li>
+        <li><a href="datenschutz.html">Datenschutz</a></li>
+        <li><a href="impressum.html">Impressum</a></li>
       </ul>
       <p class="movieflash">© MOVIEFLASH</p>
     </footer>
