--- a/movies.html
+++ b/movies.html
@@ -69,14 +69,14 @@
 
     <div class="wrapper">
       <div class="movies-container">
-        <img src="img-action-movies/nobody.jpg" alt="" />
-        <img src="img-action-movies/cosmicsin.jpg" alt="" />
-        <img src="img-action-movies/forthesake.jpg" alt="" />
-        <img src="img-action-movies/godzilla.jpg" alt="" />
-        <img src="img-action-movies/sas.jpg" alt="" />
-        <img src="img-action-movies/theredneg.jpg" alt="" />
-        <img src="img-action-movies/raya.jpg" alt="" />
-        <img src="img-action-movies/zack.jpg" alt="" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
       </div>
     </div>
 
@@ -87,14 +87,14 @@
 
     <div class="wrapper">
       <div class="movies-container">
-        <img src="img-comedy-movies/breakingnews.jpg" alt="" />
-        <img src="img-comedy-movies/dontgo.jpg" alt="" />
-        <img src="img-comedy-movies/asluck.jpg" alt="" />
-        <img src="img-comedy-movies/fit.jpg" alt="" />
-        <img src="img-comedy-movies/panda.jpg" alt="" />
-        <img src="img-comedy-movies/witness.jpg" alt="" />
-        <img src="img-comedy-movies/webrokeup.jpg" alt="" />
-        <img src="img-comedy-movies/thepizzajoint.jpg" alt="" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
       </div>
     </div>
 
@@ -105,14 +105,14 @@
 
     <div class="wrapper">
       <div class="movies-container">
-        <img src="img-horror-movies/dreamcatcher.jpg" alt="" />
-        <img src="img-horror-movies/dawnofthebeast.jpg" alt="" />
-        <img src="img-horror-movies/boysfrom.jpg" alt="" />
-        <img src="img-horror-movies/atnight.jpg" alt="" />
-        <img src="img-horror-movies/intheearth.jpg" alt="" />
-        <img src="img-horror-movies/jakobswife.jpg" alt="" />
-        <img src="img-horror-movies/theunholy.jpg" alt="" />
-        <img src="img-horror-movies/virusshark.jpg" alt="" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
       </div>
     </div>
 
@@ -123,22 +123,22 @@
 
     <div class="wrapper">
       <div class="movies-container">
-        <img src="img-romance-movies/squaredlove.jpg" alt="" />
-        <img src="img-romance-movies/imnotinlove.jpg" alt="" />
-        <img src="img-romance-movies/alittle.jpg" alt="" />
-        <img src="img-romance-movies/caughtbyawave.jpg" alt="" />
-        <img src="img-romance-movies/chasing.jpg" alt="" />
-        <img src="img-romance-movies/playingcupid.jpg" alt="" />
-        <img src="img-romance-movies/beverlyhills.jpg" alt="" />
-        <img src="img-romance-movies/aweekaway.jpg" alt="" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
       </div>
     </div>
 
     <!-- Footer -->
     <footer>
       <ul>
-        <li>Datenschutz</li>
-        <li>Impressum</li>
+        <li><a href="datenschutz.html">Datenschutz</a></li>
+        <li><a href="impressum.html">Impressum</a></li>
       </ul>
       <p class="movieflash">© MOVIEFLASH</p>
     </footer>
