--- a/series.html
+++ b/series.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>MOVIEFLASH - Popular Movies</title>
+    <title>MOVIEFLASH - Popular Series</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/series.css" />
@@ -69,14 +69,14 @@
 
     <div class="wrapper">
       <div class="movies-container">
-        <img src="img-action-tvshows/agentcarter.jpg" alt="" />
-        <img src="img-action-tvshows/agentx.jpg" alt="" />
-        <img src="img-action-tvshows/ash.jpg" alt="" />
-        <img src="img-action-tvshows/avatar.jpg" alt="" />
-        <img src="img-action-tvshows/jekyll.jpg" alt="" />
-        <img src="img-action-tvshows/thebible.jpg" alt="" />
-        <img src="img-action-tvshows/daredevil.jpg" alt="" />
-        <img src="img-action-tvshows/revolution.jpg" alt="" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
       </div>
     </div>
 
@@ -87,14 +87,14 @@
 
     <div class="wrapper">
       <div class="movies-container">
-        <img src="img-comedy-tvshows/aleague.jpg" alt="" />
-        <img src="img-comedy-tvshows/chad.jpg" alt="" />
-        <img src="img-comedy-tvshows/country.jpg" alt="" />
-        <img src="img-comedy-tvshows/thecrew.jpg" alt="" />
-        <img src="img-comedy-tvshows/themighty.jpg" alt="" />
-        <img src="img-comedy-tvshows/ohmaster.jpg" alt="" />
-        <img src="img-comedy-tvshows/home.jpg" alt="" />
-        <img src="img-comedy-tvshows/thepole.jpg" alt="" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
       </div>
     </div>
 
@@ -105,13 +105,14 @@
 
     <div class="wrapper">
       <div class="movies-container">
-        <img src="img-horror-tvshows/tvd.jpg" alt="" />
-        <img src="img-horror-tvshows/halfworlds.jpg" alt="" />
-        <img src="img-horror-tvshows/fear.jpg" alt="" />
-        <img src="img-horror-tvshows/scream.jpg" alt="" />
-        <img src="img-horror-tvshows/izombie.jpg" alt="" />
-        <img src="img-horror-tvshows/beinghuman.jpg" alt="" />
-        <img src="img-horror-tvshows/thebeast.jpg" alt="" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
       </div>
     </div>
 
@@ -122,18 +123,22 @@
 
     <div class="wrapper">
       <div class="movies-container">
-        <img src="img-romance-tvshows/beautyandthebeast.jpg" alt="" />
-        <img src="img-romance-tvshows//danni.jpg" alt="" />
-        <img src="img-romance-tvshows//outlander.jpg" alt="" />
-        <img src="img-romance-tvshows//warandpeace.jpg" alt="" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
       </div>
     </div>
 
     <!-- Footer -->
     <footer>
       <ul>
-        <li>Datenschutz</li>
-        <li>Impressum</li>
+        <li><a href="datenschutz.html">Datenschutz</a></li>
+        <li><a href="impressum.html">Impressum</a></li>
       </ul>
       <p class="movieflash">© MOVIEFLASH</p>
     </footer>
