--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>MOVIEFLASH - Watch Movies Online</title>
+    <title>MOVIEFLASH - Register Now</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/login.css" />
