movies title and year

--- a/series.html
+++ b/series.html
@@ -62,75 +62,211 @@
       </nav>
     </header>
 
-    <!-- Action Movies -->
+    <!-- Action Series -->
     <div class="wrapper-title">
       <a class="movies-title" href="#">Action Series</a>
     </div>
 
     <div class="wrapper">
       <div class="movies-container">
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <div class="movies-item">
+          <img src="img-action-movies/nobody.jpg" alt="nobody-movie" />
+          <p>Nobody <br /><span>(2021)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img
+            src="img-action-movies/raya.jpg"
+            alt="raya-and-the-last-dragon"
+          />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/sas.jpg" alt="S.A.S. Red-Notice" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/takeback.jpg" alt="take-back" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/theredneg.jpg" alt="the-redneg" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/thunderforce.jpg" alt="thunder-force" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/triggerpoint.jpg" alt="trigger-point" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/vanquish.jpg" alt="vanquish" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
       </div>
     </div>
 
-    <!-- Comedy Movies -->
+    <!-- Comedy Series -->
     <div class="wrapper-title">
       <a class="movies-title" href="#">Comedy Series</a>
     </div>
 
     <div class="wrapper">
       <div class="movies-container">
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <div class="movies-item">
+          <img
+            src="img-action-movies/forthesake.jpg"
+            alt="for-the-sake-of-vicious"
+          />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/godzilla.jpg" alt="godzilla" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/mortalkombat.jpg" alt="mortalkombat" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img
+            src="img-action-movies/raya.jpg"
+            alt="raya-and-the-last-dragon"
+          />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/sas.jpg" alt="S.A.S. Red-Notice" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/takeback.jpg" alt="take-back" />
+          <p>Lorem ipsum dolor sit amet<br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/theredneg.jpg" alt="the-redneg" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/thunderforce.jpg" alt="thunder-force" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
       </div>
     </div>
 
-    <!-- Horror Movies -->
+    <!-- Horror Series -->
     <div class="wrapper-title">
       <a class="movies-title" href="#">Horror Series</a>
     </div>
 
     <div class="wrapper">
       <div class="movies-container">
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <div class="movies-item">
+          <img src="img-action-movies/sas.jpg" alt="S.A.S. Red-Notice" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/takeback.jpg" alt="take-back" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/theredneg.jpg" alt="the-redneg" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/thunderforce.jpg" alt="thunder-force" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/triggerpoint.jpg" alt="trigger-point" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/vanquish.jpg" alt="vanquish" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/theredneg.jpg" alt="the-redneg" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/thunderforce.jpg" alt="thunder-force" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
       </div>
     </div>
 
-    <!-- Romance Movies -->
+    <!-- Romance Series -->
     <div class="wrapper-title">
       <a class="movies-title" href="#">Romance Series</a>
     </div>
 
     <div class="wrapper">
       <div class="movies-container">
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
-        <img src="img-action-movies/nobody.jpg" alt="nobody-movie-2021" />
+        <div class="movies-item">
+          <img src="img-action-movies/godzilla.jpg" alt="godzilla" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/mortalkombat.jpg" alt="mortalkombat" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img
+            src="img-action-movies/raya.jpg"
+            alt="raya-and-the-last-dragon"
+          />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/sas.jpg" alt="S.A.S. Red-Notice" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/takeback.jpg" alt="take-back" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/theredneg.jpg" alt="the-redneg" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/thunderforce.jpg" alt="thunder-force" />
+          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+        </div>
+
+        <div class="movies-item">
+          <img src="img-action-movies/sas.jpg" alt="S.A.S. Red-Notice" />
+          <p>Lorem ipsum dolor sit amet<br /><span>(2022)</span></p>
+        </div>
       </div>
     </div>
 
