--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- JavaScript -->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="main.js" defer></script>
+    <script src="popup.js" defer></script>
     <script src="form-validation.js" defer></script>
     <script src="slideshow.js" defer></script>
   </head>
@@ -106,8 +107,50 @@
     <div class="wrapper">
       <div class="movies-container">
         <div class="movies-item">
-          <img src="img-action-movies/nobody.jpg" alt="nobody-movie" />
+          <img
+            src="img-action-movies/nobody.jpg"
+            onclick="toggle()"
+            alt="nobody-movie"
+          />
           <p>Nobody <br /><span>(2021)</span></p>
+          <div class="movie-popup">
+            <img class="close" src="img/cancel.png" onclick="toggle()" />
+            <div class="popup-wrapper">
+              <video src="videos/Nobody.mp4" controls="true"></video>
+              <div class="movie-popup-text">
+                <h2>Nobody</h2>
+                <p>
+                  A nobody. When two thieves break into his suburban home one
+                  night, Hutch declines to defend himself or his family, hoping
+                  to prevent serious violence. His teenage son, Blake (Gage
+                  Munroe, The Shack), is disappointed in him and his wife, Becca
+                  (Connie Nielsen, Wonder Woman), seems to pull only further
+                  away.
+                </p>
+                <table>
+                  <tr>
+                    <td>Genre:</td>
+                    <td>Comedy, Action & Thriller</td>
+                  </tr>
+
+                  <tr>
+                    <td>Runtime:</td>
+                    <td>1h 32m</td>
+                  </tr>
+
+                  <tr>
+                    <td>Director:</td>
+                    <td>Ilya Naishuller</td>
+                  </tr>
+
+                  <tr>
+                    <td>Release Date:</td>
+                    <td>Apr 15, 2021</td>
+                  </tr>
+                </table>
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="movies-item">
