form-validation logic

--- a/login.html
+++ b/login.html
@@ -140,5 +140,16 @@
         <button type="submit" id="submit">Submit</button>
       </div>
     </form>
+
+    <!-- Footer -->
+    <footer>
+      <div class="footer-wrapper">
+        <ul>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="imprint.html">Imprint</a></li>
+        </ul>
+        <p class="movieflash">© MOVIEFLASH</p>
+      </div>
+    </footer>
   </body>
 </html>
