--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
       <span class="dot" onclick="currentSlide(3)"></span>
     </div>
 
-    <!-- Popular Movies -->
     <h2 class="popular-movies">Popular Movies</h2>
 
     <div class="wrapper">
@@ -165,7 +164,7 @@
             onclick="toggle('#raya')"
             alt="raya-and-the-last-dragon"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Raya and the Last Dragon <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="raya">
             <img class="close" src="img/cancel.png" onclick="toggle('#raya')" />
@@ -214,7 +213,7 @@
             onclick="toggle('#sas')"
             alt="S.A.S. Red-Notice"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>S.A.S. Red Notice <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="sas">
             <img class="close" src="img/cancel.png" onclick="toggle('#sas')" />
@@ -266,7 +265,7 @@
             onclick="toggle('#takeback')"
             alt="take-back"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Take Back <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="takeback">
             <img
@@ -316,7 +315,7 @@
             onclick="toggle('#redneg')"
             alt="the-redneg"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>The Redneg <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="redneg">
             <img
@@ -372,7 +371,7 @@
             onclick="toggle('#thunderforce')"
             alt="thunder-force"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Thunder Force <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="thunderforce">
             <img
@@ -426,7 +425,7 @@
             onclick="toggle('#triggerpoint')"
             alt="trigger-point"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Trigger Point <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="triggerpoint">
             <img
@@ -476,7 +475,7 @@
             onclick="toggle('#vanquish')"
             alt="vanquish"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Vanquish <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="vanquish">
             <img
@@ -529,7 +528,7 @@
             onclick="toggle('#justiceleague')"
             alt="zack-snyder's-justice-league"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Zack Snyder's Justice League <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="justiceleague">
             <img
@@ -587,7 +586,7 @@
             onclick="toggle('#vicious')"
             alt="for-the-sake-of-vicious"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>For The Sake Of Vicious <br /><span>(2020)</span></p>
 
           <div class="movie-popup" id="vicious">
             <img
@@ -638,7 +637,7 @@
             onclick="toggle('#godzilla')"
             alt="godzilla"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Godzilla vs. Kong <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="godzilla">
             <img
@@ -692,7 +691,7 @@
             onclick="toggle('#mortalkombat')"
             alt="mortalkombat"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Mortal Kombat <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="mortalkombat">
             <img
@@ -747,7 +746,7 @@
             onclick="toggle('#sas')"
             alt="S.A.S. Red-Notice"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>S.A.S. Red Notice <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="sas">
             <img class="close" src="img/cancel.png" onclick="toggle('#sas')" />
@@ -799,7 +798,7 @@
             onclick="toggle('#takeback')"
             alt="take-back"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Take Back <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="takeback">
             <img
@@ -849,7 +848,7 @@
             onclick="toggle('#redneg')"
             alt="the-redneg"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>The Redneg <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="redneg">
             <img
@@ -905,7 +904,7 @@
             onclick="toggle('#thunderforce')"
             alt="thunder-force"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Thunder Force <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="thunderforce">
             <img
@@ -957,11 +956,13 @@
 
     <!-- Footer -->
     <footer>
-      <ul>
-        <li><a href="datenschutz.html">Datenschutz</a></li>
-        <li><a href="impressum.html">Impressum</a></li>
-      </ul>
-      <p class="movieflash">© MOVIEFLASH</p>
+      <div class="footer-wrapper">
+        <ul>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="imprint.html">Imprint</a></li>
+        </ul>
+        <p class="movieflash">© MOVIEFLASH</p>
+      </div>
     </footer>
   </body>
 </html>
