--- a/series.html
+++ b/series.html
@@ -129,7 +129,7 @@
             onclick="toggle('#raya')"
             alt="raya-and-the-last-dragon"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Raya and the Last Dragon <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="raya">
             <img class="close" src="img/cancel.png" onclick="toggle('#raya')" />
@@ -178,7 +178,7 @@
             onclick="toggle('#sas')"
             alt="S.A.S. Red-Notice"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>S.A.S. Red Notice <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="sas">
             <img class="close" src="img/cancel.png" onclick="toggle('#sas')" />
@@ -230,7 +230,7 @@
             onclick="toggle('#takeback')"
             alt="take-back"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Take Back <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="takeback">
             <img
@@ -280,7 +280,7 @@
             onclick="toggle('#redneg')"
             alt="the-redneg"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>The Redneg <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="redneg">
             <img
@@ -336,7 +336,7 @@
             onclick="toggle('#thunderforce')"
             alt="thunder-force"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Thunder Force <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="thunderforce">
             <img
@@ -390,7 +390,7 @@
             onclick="toggle('#triggerpoint')"
             alt="trigger-point"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Trigger Point <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="triggerpoint">
             <img
@@ -440,7 +440,7 @@
             onclick="toggle('#vanquish')"
             alt="vanquish"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Vanquish <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="vanquish">
             <img
@@ -502,7 +502,7 @@
             onclick="toggle('#vicious')"
             alt="for-the-sake-of-vicious"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>For the Sake of Vicious <br /><span>(2020)</span></p>
 
           <div class="movie-popup" id="vicious">
             <img
@@ -553,7 +553,7 @@
             onclick="toggle('#godzilla')"
             alt="godzilla"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Godzilla vs. Kong <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="godzilla">
             <img
@@ -607,7 +607,7 @@
             onclick="toggle('#mortalkombat')"
             alt="mortalkombat"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Mortal Kombat <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="mortalkombat">
             <img
@@ -662,7 +662,7 @@
             onclick="toggle('#raya')"
             alt="raya-and-the-last-dragon"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Raya and the Last Dragon <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="raya">
             <img class="close" src="img/cancel.png" onclick="toggle('#raya')" />
@@ -711,7 +711,7 @@
             onclick="toggle('#sas')"
             alt="S.A.S. Red-Notice"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>S.A.S. Red Notice <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="sas">
             <img class="close" src="img/cancel.png" onclick="toggle('#sas')" />
@@ -763,7 +763,7 @@
             onclick="toggle('#takeback')"
             alt="take-back"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Take Back <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="takeback">
             <img
@@ -813,7 +813,7 @@
             onclick="toggle('#redneg')"
             alt="the-redneg"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>The Redneg <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="redneg">
             <img
@@ -869,7 +869,7 @@
             onclick="toggle('#thunderforce')"
             alt="thunder-force"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Thunder Force <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="thunderforce">
             <img
@@ -932,7 +932,7 @@
             onclick="toggle('#sas')"
             alt="S.A.S. Red-Notice"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>S.A.S. Red Notice <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="sas">
             <img class="close" src="img/cancel.png" onclick="toggle('#sas')" />
@@ -984,7 +984,7 @@
             onclick="toggle('#takeback')"
             alt="take-back"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Take Back <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="takeback">
             <img
@@ -1034,7 +1034,7 @@
             onclick="toggle('#redneg')"
             alt="the-redneg"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>The Redneg <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="redneg">
             <img
@@ -1090,7 +1090,7 @@
             onclick="toggle('#thunderforce')"
             alt="thunder-force"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Thunder Force <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="thunderforce">
             <img
@@ -1144,7 +1144,7 @@
             onclick="toggle('#triggerpoint')"
             alt="trigger-point"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Trigger Point <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="triggerpoint">
             <img
@@ -1194,7 +1194,7 @@
             onclick="toggle('#vanquish')"
             alt="vanquish"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Vanquish <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="vanquish">
             <img
@@ -1247,7 +1247,7 @@
             onclick="toggle('#redneg')"
             alt="the-redneg"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>The Redneg <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="redneg">
             <img
@@ -1303,7 +1303,7 @@
             onclick="toggle('#thunderforce')"
             alt="thunder-force"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Thunder Force <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="thunderforce">
             <img
@@ -1366,7 +1366,7 @@
             onclick="toggle('#godzilla')"
             alt="godzilla"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Godzilla vs. Kong <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="godzilla">
             <img
@@ -1420,7 +1420,7 @@
             onclick="toggle('#mortalkombat')"
             alt="mortalkombat"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Mortal Kombat <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="mortalkombat">
             <img
@@ -1475,7 +1475,7 @@
             onclick="toggle('#raya')"
             alt="raya-and-the-last-dragon"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Raya and the Last Dragon <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="raya">
             <img class="close" src="img/cancel.png" onclick="toggle('#raya')" />
@@ -1524,7 +1524,7 @@
             onclick="toggle('#sas')"
             alt="S.A.S. Red-Notice"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>S.A.S. Red Notice <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="sas">
             <img class="close" src="img/cancel.png" onclick="toggle('#sas')" />
@@ -1576,7 +1576,7 @@
             onclick="toggle('#takeback')"
             alt="take-back"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Take Back <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="takeback">
             <img
@@ -1626,7 +1626,7 @@
             onclick="toggle('#redneg')"
             alt="the-redneg"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>The Redneg <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="redneg">
             <img
@@ -1682,7 +1682,7 @@
             onclick="toggle('#thunderforce')"
             alt="thunder-force"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>Thunder Force <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="thunderforce">
             <img
@@ -1736,7 +1736,7 @@
             onclick="toggle('#sas')"
             alt="S.A.S. Red-Notice"
           />
-          <p>Lorem ipsum dolor sit amet <br /><span>(2022)</span></p>
+          <p>S.A.S. Red Notice <br /><span>(2021)</span></p>
 
           <div class="movie-popup" id="sas">
             <img class="close" src="img/cancel.png" onclick="toggle('#sas')" />
@@ -1786,11 +1786,13 @@
 
     <!-- Footer -->
     <footer>
-      <ul>
-        <li><a href="datenschutz.html">Datenschutz</a></li>
-        <li><a href="impressum.html">Impressum</a></li>
-      </ul>
-      <p class="movieflash">© MOVIEFLASH</p>
+      <div class="footer-wrapper">
+        <ul>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="imprint.html">Imprint</a></li>
+        </ul>
+        <p class="movieflash">© MOVIEFLASH</p>
+      </div>
     </footer>
   </body>
 </html>
